[NOID] Remove commons-collections4